correct dark mode off black to darker shade for more contrastand to better match youtube styles

--- a/src/theme.css
+++ b/src/theme.css
@@ -6,6 +6,6 @@
 
 .dark {
     --theme-color: #FF0000;
-    --theme-page-background: #282828;
+    --theme-page-background: #181818;
     --theme-page-text: #FFF;
 }
